--- a/sea_ice_extent.ipynb
+++ b/sea_ice_extent.ipynb
@@ -696,7 +696,6 @@
     "MONTHS = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
     "DOY_MID_MONTH=[15,46,74,105,135,166,196,227,258,288,319,349]\n",
     "\n",
-    "\n",
     "years_list=np.unique(sie_da.time.dt.year)[1:]\n",
     "\n",
     "#all the years in grey\n",
@@ -706,42 +705,48 @@
     "        )\n",
     "    \n",
     "    if (iYear==HIGH_YEAR):\n",
-    "        c='#1b9e77'\n",
+    "        c='#b2df8a'\n",
     "        a=1\n",
     "        l=str(HIGH_YEAR)\n",
+    "        lw=3\n",
     "    elif (iYear==LOW_YEAR):\n",
-    "        c='#d95f02'\n",
+    "        c='#33a02c' \n",
+    "        # c='#b2df8a'\n",
     "        a=1\n",
     "        l=str(LOW_YEAR)\n",
+    "        lw=3\n",
     "    elif (iYear==YEAR):\n",
-    "        c='#e7298a'\n",
+    "        c='#1f78b4'\n",
     "        a=1\n",
     "        l=YEAR\n",
+    "        lw=3\n",
     "    else:\n",
     "        c='grey'\n",
-    "        a=0.1\n",
+    "        a=0.2\n",
     "        l=None\n",
+    "        lw=1.5\n",
     "    \n",
     "    plt.plot(\n",
     "        i_da.time.dt.dayofyear,\n",
     "        i_da,\n",
     "        alpha=a,\n",
     "        color=c,\n",
-    "        label=l\n",
+    "        label=l,\n",
+    "        linewidth=lw\n",
     "    )\n",
     "    \n",
     "#mean\n",
-    "sie_mean_da.plot(label='1981-2010 Mean', color='#7570b3')\n",
+    "sie_mean_da.plot(label='1981-2010 Mean', color='black', lw=2)\n",
     "\n",
     "ax=plt.gca()\n",
     "ax.minorticks_on()\n",
     "ax.tick_params(axis='x', which='minor', bottom=False)\n",
     "plt.grid(visible=True, which='major', axis='y', linestyle='-', alpha=0.2)\n",
     "\n",
-    "# plt.yticks(\n",
-    "#     ticks=[0, 5e6, 10e6, 15e6, 20e6],\n",
-    "#     labels=['0','5','10','15','20']\n",
-    "# )\n",
+    "plt.yticks(\n",
+    "    ticks=[0, 5, 10, 15, 20],\n",
+    "    labels=['0','5','10','15','20']\n",
+    ")\n",
     "plt.ylabel('Sea Ice Extent (10$^{6}$ km\\u00b2)')\n",
     "plt.xticks(\n",
     "    ticks=DOY_MID_MONTH,\n",
@@ -753,6 +758,9 @@
     "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.22), ncol=4)\n",
     "\n",
     "plt.title('Antarctic Sea-Ice Extent')\n",
+    "plt.savefig('ant_sie_timeseries.svg',bbox_inches='tight' )\n",
+    "plt.savefig('ant_sie_timeseries.png',bbox_inches='tight' )\n",
+    "\n",
     "plt.show()"
    ]
   },
