--- a/sea_ice_extent.ipynb
+++ b/sea_ice_extent.ipynb
@@ -698,7 +698,7 @@
     "\n",
     "years_list=np.unique(sie_da.time.dt.year)[1:]\n",
     "\n",
-    "plt.figure(figsize=(8,7))\n",
+    "plt.figure(figsize=(9,8), dpi=150)\n",
     "\n",
     "#all the years in grey\n",
     "for iYear in years_list:\n",
